# huntkit

./: .env.example  .gitignore  .mcp.json.template  README.md
.claude/: settings.local.example.json
.claude-plugin/: plugin.json
.q-system/: commands.md  preflight.md  token-guard.py  tool-counter.sh
commands/: q-analyze.md  q-begin.md  q-brief.md  q-challenge.md  q-checkpoint.md  q-client-questions.md  q-collect.md  q-debrief.md  q-end.md  q-export.md  q-handoff.md  q-intake.md  q-link.md  q-new-case.md  q-osint.md  q-reality-check.md  q-scope.md  q-screenshots.md  q-sec-stack.md  q-status.md  q-target.md  q-timeline.md
mcp-servers/osint-infra/: README.md  server.py
mcp-servers/threat-intel/: .env.example  README.md  pyproject.toml  server.py
rules/: evidence-capture-protocol.md  q-investigation.md  sycophancy.md  token-discipline.md
skills/osint/: SKILL.md
skills/osint/assets/: dossier-template.md
skills/osint/references/: platforms.md  tools.md
skills/osint/scripts/: capture-evidence.sh  diagnose.sh  ingest-client-document.sh  next-ev-id.sh  perplexity-playbook.sh  perplexity.sh  render-report.py
skills/structured-analysis/: NOTICE.md  SKILL.md
skills/structured-analysis/protocols/: evidence-collector.md  iteration-handler.md  orchestrator.md  report-generator.md
skills/structured-analysis/templates/: meta-template.md
skills/structured-analysis/templates/techniques/: bowtie.md  (+17 more)
templates/new-investigation/canonical/: collection-plan.md  scope.md
templates/new-investigation/memory/: investigation-state.md
templates/sec-stack-case/: CASE.md
(+3 files in other folders)
